# projectfreddy

./: .gitignore  .tool-versions  Brewfile  Brewfile.lock.json  README.md  azure-pipelines.yml  azuredeploy.json  azureparameters.json  dockerfile  pyproject.toml  runSlides.ps1  template.tf  terraform.tfstate  terraform.tfstate.backup
.github/workflows/: telegraf.yaml
app/: config.yaml  temp2aziot.py
charts/frontend/: Chart.yaml  requirements.yaml  values.yaml
charts/frontend/templates/: _helpers.tpl  iotprocessor-deployment.yaml  iotprocessor-secret.yaml  iotprocessor-service.yaml
charts/pi2aziot/: Chart.yaml  values.yaml
charts/pi2aziot/templates/: _helpers.tpl  deployment.yaml  secret.yaml
docs/: ingress.md  slack.md
iotprocessor/: Program.cs  Run.ps1  SimpleEventProcess.cs  dockerfile  iotprocessor.csproj
pi2aziot/: dockerfile
pi2aziot/app/: requirements.txt  temp2aziot.py
pres/: slides.md
telegraf/: Dockerfile  telegraf.conf
terraform/: default.tfvars  iotProcessor.tf  main.tf  out.tfplan  terragrunt.hcl  variables.tf
terraform/amp/dev/us-east-1/: terragrunt.hcl
terraform/modules/accesskey/: main.tf
terraform/modules/amp/: main.tf
terraform/modules/tags/: outputs.tf  variables.tf
terraform/node-module/: main.tf
