[tool.poetry]
name = "projectfreddy"
version = "0.1.0"
description = ""
authors = ["Josh Feierman <josh@sqljosh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-sso-util = "^4.32.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
